@startuml main

  class "User" as u {
    - id: Long
    - name: String
    - admin: boolean
    - results: Set<Result>
  }

  class "Race" as r {
    - id: Long
    - title: String
    - description: String
    - duration: Integer
    - questions: Set<Question>
    - results: Set<Result>
  }

  class "Question" as q {
    - id: Long
    - statement: String
    - points: Integer
    - race: Race
    - answers: Set<Answer>
  }

  class "Answer" as a {
    - id: Long
    - content: String
    - correct: boolean
    - question: Question
  }

  class "Result" as re {
    - id: Long
    - participant: User
    - race: Race
    - points: Integer
    - answeredAt: LocalDateTime
  }

  r "1..1" *-- "1..*" q
  q "1..1" *-- "1..*" a

  re "0..*" o-- "1..1" u
  re "0..*" o-- "1..1" r

@enduml